assets/_richtext: add margin to bulleted list to fix cut off on safari fixes #494

--- a/digitalstrategie/assets/scss/components/_richtext.scss
+++ b/digitalstrategie/assets/scss/components/_richtext.scss
@@ -19,3 +19,8 @@
         max-width: 65%;
     }
 }
+
+// needed for bullet point cut off on safari
+.textile ul > li {
+    margin-left: 2px;
+}
